# crates

./: Cargo.toml
crates/azure_yubikey_auth/: notes.md
crates/azure_yubikey_auth/examples/: get_token.rs
crates/browser/: Cargo.toml
crates/browser/src/: lib.rs  svg_backend.rs
crates/date-impl/: Cargo.toml  calc-ymd.rs  date-impl.rs  tests.rs
crates/derivatives/: Cargo.toml  README.md
crates/derivatives/examples/: elec.rs  futures.rs  gas.rs  mixed.rs
crates/derivatives/src/: lib.rs  providers.rs  reports.rs  units.rs
crates/derivatives/src/units/: add.rs  currency.rs  div.rs  impls.rs  mul.rs  ord.rs  serde.rs  sub.rs  sum.rs  zero.rs
crates/input/: Cargo.toml
crates/nmi/: Cargo.toml
crates/nmi/src/: lib.rs
crates/relational/: Cargo.toml
crates/relational/src/: lib.rs
crates/resolution/: Cargo.toml
crates/resolution/src/: calc-ymd.rs  const_formatting.rs  day.rs  lib.rs  minutes.rs  month.rs  quarter.rs  range.rs  saturating.rs  time_of_day.rs  week.rs  year.rs  zoned.rs
crates/resolution/src/day/: date_impl.rs  tests.rs
crates/timeseries/: Cargo.toml
crates/timeseries/src/: compressed.rs  lib.rs
old/azure_yubikey_auth/: Cargo.toml
old/azure_yubikey_auth/src/: lib.rs
old/cashflow/: Cargo.toml
old/cashflow/src/: accounting.rs  fields.rs  input.rs  lib.rs  pages.rs  ui.rs
old/cashflow/src/pages/: balance_sheet_report.rs  cash_flow_report.rs  edit_accrual_generator.rs  edit_cash_generator.rs  generators.rs  opening_balances.rs  profit_and_loss_report.rs
xtask/: Cargo.toml
xtask/src/: main.rs
