[workspace]
resolver = "2"
members = [ "crates/*", "xtask" ]
exclude = [ 
    "old",
    "crates/derivatives",
    "crates/relational",
    "crates/input",
]

[workspace.dependencies]
anyhow = { version = "1.0.89", default-features = false }
arrayvec = { version = "0.7.6", default-features = false }
chrono = { version = "0.4.38", default-features = false }
chrono-tz = { version = "0.10.0", default-features = false }
console_error_panic_hook = { version = "0.1.7", default-features = false }
futures-core = { version = "0.3.30", default-features = false }
hyper = { version = "1.4.1", default-features = false }
hyper-util = { version = "0.1.8", default-features = false }
itertools = { version = "0.13.0", default-features = false }
js-sys = { version = "0.3.70", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
once-cell = { version = "1.19.0", default-features = false }
plotters = { version = "0.3.7", default-features = false }
plotters-backend = { version = "0.3.7", default-features = false }
reqwest = { version = "0.12.7", default-features = false }
rkyv = { version = "0.8.5", default-features = false }
rust_decimal = { version = "1.36.0", default-features = false }
serde = { version = "1.0.210", default-features = false }
serde_json = { version = "1.0.128", default-features = false }
tokio = { version = "1.40.0", default-features = false }
tokio-stream = { version = "0.1.16", default-features = false }
toml = { version = "0.8.19", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
uuid = { version = "1.10.0", default-features = false }
wasm-bindgen = { version = "0.2.93", default-features = false }
wasm-bindgen-futures = { version = "0.4.43", default-features = false }
web-sys = { version = "0.3.70", default-features = false }

















