[package]
name = "browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3.57"
console_error_panic_hook = "0.1.6"
once_cell = "1.10.0"
gloo = "0.7.0"
futures-channel = "0.3.21"
futures-util = "0.3.21"
futures-core = "0.3.21"
async-trait = "0.1.53"
tracing = "0.1"
plotters = { version = "0.3.1", default-features = false, features = ["datetime", "full_palette", "colormaps", "errorbar", "candlestick", "boxplot","all_series", "all_elements"] }
tokio =  { version = "1.35.1", features = ["sync"] }
tokio-stream = { version = "0.1.14", features = ["sync"], default-features = false}
plotters-backend = "0.3.2"
serde-wasm-bindgen = "0.6.3"
uuid = { version = "1.1.2", features = ["v4", "js"] }

gc = { version = "0.5.0", features = ["derive"], default-features = false}

[dependencies.web-sys]
version = "0.3.57"
features = [
    "Element",
    "Node",
    "NodeList",
    "Window",
    "Document",
    "HtmlAllCollection",
    "HtmlDivElement",
    "HtmlButtonElement",
    "HtmlHeadingElement",
    "HtmlParagraphElement",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "HtmlBrElement",
    "HtmlFieldSetElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlHrElement",
    "HtmlLiElement",
    "HtmlOptionElement",
    "HtmlSelectElement",
    "HtmlSpanElement",
    "HtmlTableCellElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTextAreaElement",
    "SvgRectElement",
    "SvgCircleElement",
    "SvgLineElement",
    "SvgPolygonElement",
    "SvgPolylineElement",
    "SvgsvgElement",
    "SvgTextElement",
    "SvgImageElement",
    "SvgElement",
    "MutationObserver",
    "Event",
    "EventTarget",
]

