[package]
name = "resolution"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "calc-ymd"
harness = false
path = "src/calc-ymd.rs"

[dependencies.serde]
workspace = true
features = ["derive"]
optional = true

[dependencies.chrono]
workspace = true
default-features = false
optional = true 

[dev-dependencies]
serde_json = "1.0.115"
chrono-tz = "0.10.0"
chrono = "0.4"
criterion = "0.5.0"

[features]
serde = ["dep:serde","chrono/serde"]
std = ["chrono/std"]


