[package]
name = "accounting-forecaster"
version = "0.1.0"
authors = ["Eric Sheppard <eric@sheppard.cloud>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
resolution = { path = "../resolution" }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ron = "0.6"
seed = "0.8"
wasm-bindgen = "0.2.68"
once_cell = "1.5"
ulid = { version = "0.4", features = ["serde"] }
thiserror = "1"